# clui

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  install.sh
scripts/: build-release.sh
src/: app.rs  args.rs  clash.rs  client.rs  config.rs  context.rs  core_manager.rs  event.rs  instance.rs  main.rs  scheduler.rs  state.rs  terminal.rs  updater.rs
src/commands/: command.rs  executor.rs  mod.rs  registry.rs
src/tabs/: connections.rs  logs.rs  mod.rs  overview.rs  providers.rs  proxies.rs  rules.rs
src/ui/: connections.rs  logs.rs  mod.rs  overview.rs  providers.rs  proxies.rs  rules.rs
