[package]
name = "clash-tui"
version = "0.2.0"
edition = "2024"
authors = ["clash-tui contributors"]
description = "A htop-like TUI for Clash/Mihomo proxy on servers"
license = "MIT"
repository = "https://github.com/yourname/clash-tui"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Network
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2"

# Utilities
chrono = "0.4"
unicode-width = "0.2"
dirs = "5"
log = "0.4"
scopeguard = "1"

# CLI
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

# Other
md5 = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false

[profile.release.build-override]
opt-level = "z"

[profile.mini]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
